css 수정 (리스트 모양)

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     .wrap_check span{
       width: 15px;
       height: 15px;
+      top: 2px;
       display: block;
       position: absolute;
       border: 1px solid hsl(234, 39%, 85%);
@@ -101,6 +102,7 @@
       color: hsl(234, 39%, 85%);
       font-size: 18px;
       line-height: 23px;
+      padding-left: 8px;
     }
     .item_delete{
       cursor: pointer;
