--- a/index.html
+++ b/index.html
@@ -105,16 +105,62 @@
       padding-left: 8px;
     }
     .item_delete{
+      visibility: hidden;
       cursor: pointer;
       background-color: hsl(235, 24%, 19%);
       border: none;
+    }
+    .item_todo:hover .item_delete{
+      visibility: visible;
+    }
+    .footer{
+      display: grid;
+      grid-template-columns: 1fr 2fr 1fr;
+      font-size: 13px;
+      height: 40px;
+    }
+    .todo_count{
+      color: hsl(234, 39%, 85%);
+      text-align: center;
+      line-height: 40px;
+      font-weight: 300;
+    }
+    .footer_select{
+      display: flex;
+      justify-content: center;
+    }
+    .button_todo{
+      cursor: pointer;
+      border: none;
+      background: none;
+      color: hsl(234, 39%, 85%);
+      font-size: 13px;
+      text-align: center;
+      font-family: 'Josefin Sans', sans-serif;
+      padding: 0;
+    }
+    .button_todo:nth-child(2){
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+    .footer_clear{
+      line-height: 40px;
+      text-align: center;
+    }
+    .footer_clear .button_todo{
+      font-weight: 300;
     }
     .light .icon_theme{
       background: url(images/icon-sun.svg);
       border-radius: 0.3rem;
     }
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
 <body>
@@ -140,10 +186,10 @@
         </div>
         <div class="footer_select">
           <button class="button_todo all">All</button
-          ><button class="=button_todo active">Active</button
+          ><button class="button_todo active">Active</button
           ><button class="button_todo completed">Completed</button>
         </div>
-        <div><button class="button_todo clear">Clear Completed</button></div>
+        <div class="footer_clear"><button class="button_todo clear">Clear Completed</button></div>
       </div>
     </div>
   </div>
