--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -7,167 +7,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="index.css">
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Todo app</title>
-  <style>
-    html,body{
-      height: 100%;
-    }
-    textarea:focus, input:focus{
-    outline: none;
-    }
-    body{
-      font-family: 'Josefin Sans', sans-serif;
-      display: flex;
-      padding-top: 5rem;
-      justify-content: center;
-      background: top/contain no-repeat url(images/bg-desktop-dark.jpg) hsl(235, 21%, 11%);
-    }
-    main{
-      width: 40vw;
-    }
-    .wrap_header{
-      height: 100px;
-      padding-top: 10%;
-      box-sizing: border-box;
-      display: flex;
-      justify-content: space-between;
-    }
-    .title{
-      color: #fff;
-      font-size: 2.5rem;
-      font-weight: 700;
-    }
-    .icon_theme{
-      display: block;
-      background: url(images/icon-moon.svg);
-      width: 26px;
-      height: 26px;
-    }
-    .wrap_todo{
-      margin-top: 7vh;
-    }
-    .wrap_input{
-      width: 100%;
-      padding: 1em 1em 0.8em 1em;
-      background-color: hsl(235, 24%, 19%);
-      border-radius: 0.3rem;
-      box-sizing: border-box;
-    }
-    .input_todo{
-      width: 100%;
-      background: hsl(235, 24%, 19%);
-      height: 100%;
-      border:none;
-      color: hsl(234, 39%, 85%);
-      font-family: 'Josefin Sans', sans-serif;
-      font-weight: 500;
-      font-size: 18px;
-    }
-    .wrap_box{
-      margin-top: 25px;
-      background: hsl(235, 24%, 19%);
-      border-radius: 0.3rem;
-    }
-    .item_todo{
-      padding: 1em 1em 0.8em 1em;
-      border-bottom: 1px solid hsl(234, 11%, 52%);
-      display: grid;
-      grid-template-columns: 1fr 13fr 1fr;
-    }
-    .wrap_check{
-      position: relative;
-    }
-    .check_todo{
-      position: absolute;
-      opacity: 0;
-      cursor: pointer;
-      height: 0;
-      width: 0;
-    }
-    .wrap_check span{
-      width: 15px;
-      height: 15px;
-      top: 2px;
-      display: block;
-      position: absolute;
-      border: 1px solid hsl(234, 39%, 85%);
-      border-radius: 50%;
-    }
-    .check_todo:hover ~ .check_todo:before{
-      background: hsl(234, 39%, 85%);
-    }
-    .text_todo{
-      display: inline-block;
-      color: hsl(234, 39%, 85%);
-      font-size: 18px;
-      line-height: 23px;
-      padding-left: 8px;
-    }
-    .item_delete{
-      visibility: hidden;
-      cursor: pointer;
-      background-color: hsl(235, 24%, 19%);
-      border: none;
-    }
-    .item_todo:hover .item_delete{
-      visibility: visible;
-    }
-    .footer{
-      display: grid;
-      grid-template-columns: 1fr 2fr 1fr;
-      font-size: 13px;
-      height: 40px;
-    }
-    .todo_count{
-      color: hsl(234, 39%, 85%);
-      text-align: center;
-      line-height: 40px;
-      font-weight: 300;
-    }
-    .footer_select{
-      display: flex;
-      justify-content: center;
-    }
-    .button_todo{
-      cursor: pointer;
-      border: none;
-      background: none;
-      color: hsl(234, 11%, 52%);
-      font-size: 13px;
-      text-align: center;
-      font-family: 'Josefin Sans', sans-serif;
-      padding: 0;
-    }
-    .button_todo:nth-child(2){
-      padding-left: 30px;
-      padding-right: 30px;
-    }
-    .footer_clear{
-      line-height: 40px;
-      text-align: center;
-    }
-    .footer_clear .button_todo{
-      font-weight: 300;
-    }
-    .button_todo:hover{
-      color:hsl(234, 39%, 85%);
-    }
-    .button_todo.active{
-      color:hsl(220, 98%, 61%);
-    }
-    .light .icon_theme{
-      background: url(images/icon-sun.svg);
-      border-radius: 0.3rem;
-    }
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 <body>
   <main>
@@ -180,7 +22,7 @@
         <input class="input_todo" type="text" placeholder="let's do something...">
       </div>
       <div class="wrap_box">
-      <ul class="list_todo" role="list">
+      <ul class="list_todo">
         <li class="item_todo">
           <div class="wrap_check"><input type="checkbox" aria-label="checkbox" class="check_todo" name="checkbox" id="checkbox"><span class="todo_mark"></span></div> <label for="checkbox" class="text_todo">make this to do list done‼️</label>
           <button aria-label="Remove" class="item_delete"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"><path fill="#494C6B" fill-rule="evenodd" d="M16.97 0l.708.707L9.546 8.84l8.132 8.132-.707.707-8.132-8.132-8.132 8.132L0 16.97l8.132-8.132L0 .707.707 0 8.84 8.132 16.971 0z"/></svg></button>
@@ -200,5 +42,18 @@
     </div>
   </div>
 </main>
+<script>
+  // add light mode theme class at main
+  const btn_theme = document.querySelector('.icon_theme');
+  let count = 0;
+  btn_theme.addEventListener('click', e => {
+    count++;
+    if(count % 2 != 0){
+      document.documentElement.setAttribute("data-theme", "light");
+    }else{
+      document.documentElement.setAttribute("data-theme", "dark");
+    }
+  })
+</script>
 </body>
 </html>
