todo item count

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       </div>
       <div class="wrap_box">
       <ul class="list_todo">
-        <li class="item_todo">
+        <li class="item_todo" data-index="0">
           <div class="wrap_check"><input type="checkbox" aria-label="checkbox" class="check_todo" name="checkbox" id="checkbox"><span class="todo_mark"></span></div> <label for="checkbox" class="text_todo">make this to do list done‼️</label>
           <button aria-label="Remove" class="item_delete"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"><path fill="#494C6B" fill-rule="evenodd" d="M16.97 0l.708.707L9.546 8.84l8.132 8.132-.707.707-8.132-8.132-8.132 8.132L0 16.97l8.132-8.132L0 .707.707 0 8.84 8.132 16.971 0z"/></svg></button>
         </li>
       </ul>
       <div class="footer">
         <div class="left_footer">
-          <p class="todo_count">0 items left</p>
+          <p class="todo_count"><em>0</em> items left</p>
         </div>
         <div class="footer_select">
           <button class="button_todo button_all">All</button
@@ -54,6 +54,11 @@
       document.documentElement.setAttribute("data-theme", "dark");
     }
   })
+
+  // todo list item count 
+  const count_list = document.querySelector('.todo_count > em');
+  const list_length = document.querySelectorAll('.item_todo').length;
+  count_list.innerHTML = list_length;
 </script>
 </body>
 </html>
